<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:fontFamily="sans-serif-light"
            android:paddingBottom="8dp"
            android:singleLine="true"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Less Wrong" />

        <TextView
            android:id="@+id/favoritesNbLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author_favorites_nb"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameTextView" />

        <TextView
            android:id="@+id/favoritesNbValueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/favoritesNbLabelTextView"
            app:layout_constraintStart_toEndOf="@+id/barrier"
            tools:text="62" />

        <TextView
            android:id="@+id/storiesNbLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author_stories_nb"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/favoritesNbLabelTextView" />

        <TextView
            android:id="@+id/storiesNbValueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/storiesNbLabelTextView"
            app:layout_constraintStart_toEndOf="@+id/barrier"
            tools:text="1" />

        <TextView
            android:id="@+id/fetchedDateLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/download_info_fetched_date_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/storiesNbLabelTextView" />

        <TextView
            android:id="@+id/fetchedDateValueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/fetchedDateLabelTextView"
            app:layout_constraintStart_toEndOf="@+id/barrier"
            tools:text="2015/03/14" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="right"
            app:constraint_referenced_ids="favoritesNbLabelTextView,storiesNbLabelTextView,fetchedDateLabelTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
